FlightPath 5.x Changelog
========================

2018-03-11
  Fixed bug where track descriptions (when editing a degree) were having filter_markup applied twice, causing new lines to keep appearing.


2018-03-09
  Updated hook_fp_get_student_majors to have the same (newly added) arguments as the DatabaseHandler function.  Similarly updated system.module's implentation
  of the hook.  Also updated student_search.module, to take advantage of this addition, to tell it not to join with the degrees table, as the student's listed
  degree might not be present in that catalog year in the degrees table.  This was to fix a bug.


2018-03-07
  Fixed bug where new_from_split courses were allowed to fill into other degrees, instead of going straight to 'excess credits', which is the
  expected behavior.
  
  Added $group_id to find_xyz_match functions in _CourseList.  This is not used by core code, but is passed along to hooks, so that modules
  can better decide to allow the course or not.
  
  Added get_group_name function to _DatabaseHandler for quick lookups of a group's name by its id.
  
  Fixed a bug where "combined" degree plans didn't retain their "db_allow_dynamic = 1" member variable.  Thanks to Logan Buth.
  
  Fixed typo for db_allow_dynamic in theme.inc.  Thanks to Kim Sangwin


2018-03-05
  Added a new hook, hook_courselist_find_match_allow_course.  This allows modules too hook in just before a "match" is found by _CourseList's match methods,
  to determine if it should really keep the course or skip it.  This was introduced to counter a bug.  Special thanks to Logan Buth for the concept.
  
  Added extra code to _Course::name_equals, to call load_descriptive_data if subject_id is not populated.    


2018-02-27
  Fixed bug where selecting a track for a degree which already had a | in it would have failed.
  
  Fixed bug for non-dynamic degrees and degree option (track) selection.  It now uses the first "editable"